[package]
name = "mahjong"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.23",  features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
