[package]
name = "mahjong"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = {version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
reqwest = {version = "0.12.23",  features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
