[package]
name = "mahjong"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_cbor = "0.11.2"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
